--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,17 +1,30 @@
 ---
 ---
 
-@import "colors";
 @import "fonts";
+@import "typography";
+@import "colors";
 
 @import "hero";
 @import "footer";
 
+* {
+  box-sizing: border-box;
+}
+
+html,
 body {
   display: flex;
   flex-direction: column;
   height: 100vh;
   margin: 0;
+  padding: 0;
+  overflow: auto;
+}
+
+a,
+button {
+  cursor: pointer;
 }
 
 main {
