--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,8 @@
 
   <link rel="icon" type="image/png" href="{{ "/img/favicon.png" | absolute_url }}"/>
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}" />
+
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 
 
