--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -45,7 +45,7 @@
 
 @font-face {
   font-family: "Vision Light Italic";
-  src: url("../fonts/vision/light.woff2") format('woff2');
+  src: url("../fonts/vision/light-italic.woff2") format('woff2');
 }
 
 @font-face {
