--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,3 @@
 <!-- Javascript -->
-<script src="{{ "/js/hero.js" | absolute_url }}" type="text/javascript"></script>
+<script src="{{ "/js/feather-icon.js" | absolute_url }}" type="text/javascript"></script>
+<script src="{{ "/js/nav.js" | absolute_url }}" type="text/javascript"></script>
