--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -4,4 +4,4 @@ $mixed-color: #d92d83;
 $darker-secondary-color: #ee3059;
 $secondary-color: #fc4d40;
 
-
+$linear-gradient: linear-gradient(90deg, $secondary-color 0%, $mixed-color 50%, $primary-color 100%);
