angled background header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="site-footer">
+	<div class="angled-background"></div>
 	<div class="copyright">
-		<p>&copy;{{ 'now' | date: "%Y" }} {{ site.title }} - All Rights Reserved<br></p>
+		&copy;{{ 'now' | date: "%Y" }} {{ site.title }} - All Rights Reserved<br>
 	</div>
 </footer>
