--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -5,3 +5,4 @@ $darker-secondary-color: #ee3059;
 $secondary-color: #fc4d40;
 
 $linear-gradient: linear-gradient(90deg, $secondary-color 0%, $mixed-color 50%, $primary-color 100%);
+$box-shadow: 0px 0px 10px 2px #a5a4a4;
