Fix angled background header

--- a/_sass/_twitch.scss
+++ b/_sass/_twitch.scss
@@ -3,7 +3,7 @@
 
 #twitch-embed {
   position: absolute;
-  top: #{$angled-background-height + $nav-height};
+  top: $angled-background-height - 16px;
   display: flex;
   justify-content: center;
 }
