--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,7 +33,7 @@ main {
   .main-container {
     position: relative;
     top: $angled-background-height;
-    margin: 6em 0;
+    margin: 6em 0 -6em 0;
   }
 }
 
