--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -6,3 +6,4 @@ $secondary-color: #fc4d40;
 
 $linear-gradient: linear-gradient(90deg, $secondary-color 0%, $mixed-color 50%, $primary-color 100%);
 $box-shadow: 0px 0px 10px 2px #a5a4a4;
+$box-shadow-color: 0px 0px 10px 2px $mixed-color;
