--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,10 @@
 @import "footer";
 
 @import "twitch";
+@import "staff";
+@import "staff-member";
+@import "player-stats";
+
 * {
   box-sizing: border-box;
 }
